[MODINVOICE-579]. Switch to using the Finance Exchange Rate Api