@@ -9,16 +9,16 @@ import org.folio.rest.jaxrs.model.Invoice;
 import org.folio.rest.jaxrs.model.InvoiceLine;
 import org.folio.services.adjusment.AdjustmentsService;
 import org.folio.services.configuration.ConfigurationService;
-import org.folio.services.exchange.ExchangeRateProviderResolver;
+import org.folio.services.exchange.CacheableExchangeRateService;
+import org.folio.services.exchange.CentralExchangeRateProvider;
 import org.javamoney.moneta.Money;
 
 import javax.money.MonetaryAmount;
-import javax.money.convert.ConversionQuery;
 import javax.money.convert.CurrencyConversion;
-import javax.money.convert.ExchangeRateProvider;
 import java.util.Collection;
 import java.util.List;
 import java.util.Map;
+import java.util.NoSuchElementException;
 import java.util.function.Function;
 import java.util.stream.Collectors;
 
@@ -28,36 +28,37 @@ import static javax.money.Monetary.getDefaultRounding;
 import static org.folio.invoices.utils.HelperUtils.getAdjustmentFundDistributionAmount;
 import static org.folio.invoices.utils.HelperUtils.getFundDistributionAmount;
 
-
 public class InvoiceFundDistributionService {
 
   private final AdjustmentsService adjustmentsService;
   private final ConfigurationService configurationService;
-  private final ExchangeRateProviderResolver exchangeRateProviderResolver;
+  private final CacheableExchangeRateService cacheableExchangeRateService;
 
-
-  public InvoiceFundDistributionService(AdjustmentsService adjustmentsService, ConfigurationService configurationService,
-      ExchangeRateProviderResolver exchangeRateProviderResolver) {
+  public InvoiceFundDistributionService(AdjustmentsService adjustmentsService,
+                                        ConfigurationService configurationService,
+                                        CacheableExchangeRateService cacheableExchangeRateService) {
     this.adjustmentsService = adjustmentsService;
     this.configurationService = configurationService;
-    this.exchangeRateProviderResolver = exchangeRateProviderResolver;
+    this.cacheableExchangeRateService = cacheableExchangeRateService;
   }
 
   public Future<List<FundDistribution>> getAllFundDistributions(List<InvoiceLine> invoiceLines, Invoice invoice,
-      RequestContext requestContext) {
+                                                                RequestContext requestContext) {
     return configurationService.getSystemCurrency(requestContext)
-      .map(systemCurrency -> {
-        ConversionQuery conversionQuery = HelperUtils.buildConversionQuery(invoice, systemCurrency);
-        ExchangeRateProvider exchangeRateProvider = exchangeRateProviderResolver.resolve(conversionQuery, requestContext);
-        CurrencyConversion conversion = exchangeRateProvider.getCurrencyConversion(conversionQuery);
-        List<FundDistribution> fundDistributions = getInvoiceLineFundDistributions(invoiceLines, invoice, conversion);
-        fundDistributions.addAll(getAdjustmentFundDistributions(invoice, conversion));
-        return fundDistributions;
-      });
+      .compose(systemCurrency -> cacheableExchangeRateService.getExchangeRate(invoice.getCurrency(), systemCurrency, invoice.getExchangeRate(), requestContext)
+        .compose(exchangeRateOptional -> {
+          var exchangeRate = exchangeRateOptional.orElseThrow(() -> new NoSuchElementException("Cannot retrieve exchange rate from API")).getExchangeRate();
+          var conversionQuery = HelperUtils.buildConversionQuery(invoice.getCurrency(), systemCurrency, exchangeRate);
+          var exchangeRateProvider = new CentralExchangeRateProvider();
+          var conversion = exchangeRateProvider.getCurrencyConversion(conversionQuery);
+          var fundDistributions = getInvoiceLineFundDistributions(invoiceLines, invoice, conversion);
+          fundDistributions.addAll(getAdjustmentFundDistributions(invoice, conversion));
+          return Future.succeededFuture(fundDistributions);
+        }));
   }
 
   private List<FundDistribution> getInvoiceLineFundDistributions(List<InvoiceLine> invoiceLines, Invoice invoice,
-    CurrencyConversion conversion) {
+                                                                 CurrencyConversion conversion) {
     Map<InvoiceLine, List<FundDistribution>> fdsByLine = invoiceLines.stream()
       .collect(toMap(Function.identity(), InvoiceLine::getFundDistributions));
 
@@ -65,25 +66,21 @@ public class InvoiceFundDistributionService {
       .stream()
       .map(invoiceLine -> {
         var invoiceLineTotalWithConversion = Money.of(invoiceLine.getKey().getTotal(), invoice.getCurrency()).with(conversion);
-
-        List<FundDistribution> fds = invoiceLine.getValue()
-          .stream().sequential()
+        List<FundDistribution> fds = invoiceLine.getValue().stream()
           .map(fD -> JsonObject.mapFrom(fD)
             .mapTo(FundDistribution.class)
             .withInvoiceLineId(invoiceLine.getKey().getId())
             .withDistributionType(FundDistribution.DistributionType.AMOUNT)
             .withValue(getFundDistributionAmountWithConversion(fD, invoiceLineTotalWithConversion, conversion)))
           .collect(toList());
-
         return getRedistributedFunds(fds, invoiceLineTotalWithConversion, conversion);
-
       })
       .flatMap(Collection::stream)
       .collect(Collectors.toList());
   }
 
   private List<FundDistribution> getRedistributedFunds(List<FundDistribution> fds, MonetaryAmount expectedTotal,
-      CurrencyConversion conversion) {
+                                                       CurrencyConversion conversion) {
     MonetaryAmount actualDistributedAmount = fds.stream()
       .map(FundDistribution::getValue)
       .map(amount -> Money.of(amount, conversion.getCurrency()))
@@ -93,14 +90,14 @@ public class InvoiceFundDistributionService {
     MonetaryAmount remainedAmount = expectedTotal.subtract(actualDistributedAmount);
 
     if (remainedAmount.isNegative()) {
-      FundDistribution fdForUpdate = fds.get(0);
+      FundDistribution fdForUpdate = fds.getFirst();
       // Subtract from the first fd
       var currentFdAmount = Money.of(fdForUpdate.getValue(), conversion.getCurrency());
       var updatedFdAmount = currentFdAmount.subtract(remainedAmount.abs());
       fdForUpdate.setValue(updatedFdAmount.getNumber().doubleValue());
     } else if (remainedAmount.isPositive()) {
       // add to the last fd
-      FundDistribution fdForUpdate = fds.get(fds.size() - 1);
+      FundDistribution fdForUpdate = fds.getLast();
       var currentFdAmount = Money.of(fdForUpdate.getValue(), conversion.getCurrency());
       var updatedFdAmount = currentFdAmount.add(remainedAmount);
       fdForUpdate.setValue(updatedFdAmount.getNumber().doubleValue());
@@ -109,7 +106,7 @@ public class InvoiceFundDistributionService {
   }
 
   private double getFundDistributionAmountWithConversion(FundDistribution fundDistribution, MonetaryAmount totalAmount,
-      CurrencyConversion conversion) {
+                                                         CurrencyConversion conversion) {
     MonetaryAmount amount = getFundDistributionAmount(fundDistribution, totalAmount).with(conversion).with(getDefaultRounding());
     return amount.getNumber().doubleValue();
   }
@@ -125,5 +122,4 @@ public class InvoiceFundDistributionService {
       )
       .collect(toList());
   }
-
 }
